Crash in [@ nsWindow::OnConfigureEvent]
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
People
(Reporter: mccr8, Assigned: stransky)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/765e1aa3-1694-4791-a27d-0c61f0211201
MOZ_CRASH Reason: MOZ_DIAGNOSTIC_ASSERT(mGdkWindow) (Getting configure for invisible window?)
Top 10 frames of crashing thread:
0 libxul.so nsWindow::OnConfigureEvent widget/gtk/nsWindow.cpp:3709
1 libxul.so configure_event_cb widget/gtk/nsWindow.cpp:7436
2 libgtk-3.so.0 _gtk_marshal_BOOLEAN__BOXED /usr/src/debug/gtk3-3.24.11-1.fc30.x86_64/gtk/gtkmarshalers.c:83
3 libgobject-2.0.so.0 <name omitted> ../gobject/gclosure.c:810
4 libgobject-2.0.so.0 signal_emit_unlocked_R ../gobject/gsignal.c:3635
5 libgobject-2.0.so.0 g_signal_emit_valist ../gobject/gsignal.c:3401
6 libgobject-2.0.so.0 <name omitted> ../gobject/gsignal.c:3447
7 libgtk-3.so.0 gtk_widget_event_internal /usr/src/debug/gtk3-3.24.11-1.fc30.x86_64/gtk/gtkwidget.c:7658
8 libgtk-3.so.0 gtk_main_do_event /usr/src/debug/gtk3-3.24.11-1.fc30.x86_64/gtk/gtkmain.c:1685
9 libgdk-3.so.0 _gdk_event_emit gdkevents.c:73
Assignee | ||
Comment 1•1 year ago
|
||
Fedora 30 (Workstation Edition) - looks as very outdated setup.
Comment 2•11 months ago
•
|
||
Hi! I'm hitting this crash as well (https://crash-stats.mozilla.org/report/index/62a12a80-9789-4a19-bebe-bbcfc0220315), when trying to open Firefox Nightly 100.0a1 and Beta 99.0b3, on a wayland session. I'll leave my STR in the bug.
Steps to reproduce
- Open a terminal in Ubuntu.
- Ran the following two variables in terminal. Press enter after pasting each variable.
-
MOZ_ENABLE_WAYLAND=1
-
export MOZ_ENABLE_WAYLAND=1
- Launch Firefox from the same terminal opened in step 1.
Let me know if I should file a separate bug for this.
Comment 3•9 months ago
|
||
Weirdly enough, I keep getting this failure on try and I have no idea why: https://treeherder.mozilla.org/jobs?repo=try&selectedTaskRun=e2UKLsxBSNGenqlq7NoDdQ.0
Comment 4•5 months ago
|
||
Since the crash volume is low (less than 5 per week), the severity is downgraded to S3
. Feel free to change it back if you think the bug is still critical.
For more information, please visit auto_nag documentation.
Assignee | ||
Comment 5•5 months ago
|
||
Updated•5 months ago
|
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/4d1e93c629da [Linux] Don't crash if we get configure event for hidden window r=emilio
Comment 7•5 months ago
|
||
bugherder |
Updated•4 months ago
|
Updated•4 months ago
|
Comment 8•3 months ago
|
||
Hello,
I tried to reproduce the crash using the STR from comment 2 without success. Could you please verify the fix on Firefox Beta?
Reporter | ||
Comment 9•3 months ago
|
||
I reported this based on crash stats, so I haven't tried to reproduce this myself. I don't actually have access to a Linux machine at the moment.
Description
•