Bug 1744148 [Linux] Don't crash if we get configure event for hidden window r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D157820